--- a/config/sync/core.entity_form_display.node.committee_member.default.yml
+++ b/config/sync/core.entity_form_display.node.committee_member.default.yml
@@ -3,19 +3,19 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.browse_files_modal
     - field.field.node.committee_member.field_country_cm
     - field.field.node.committee_member.field_custom_date_range_text
     - field.field.node.committee_member.field_designation_cm
     - field.field.node.committee_member.field_end_of_mandate
     - field.field.node.committee_member.field_parent_node_cm
     - field.field.node.committee_member.field_photo_cm
-    - image.style.thumbnail
     - node.type.committee_member
   module:
     - address
     - datetime
+    - entity_browser
     - field_layout
-    - image
     - layout_discovery
     - path
 third_party_settings:
@@ -69,9 +69,15 @@ content:
     region: content
   field_photo_cm:
     weight: 9
-    type: image_image
+    type: entity_browser_file
     settings:
-      progress_indicator: throbber
+      entity_browser: browse_files_modal
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      view_mode: default
+      field_widget_replace: false
+      open: false
       preview_image_style: thumbnail
     third_party_settings: {  }
     region: content
@@ -119,9 +125,9 @@ content:
     third_party_settings: {  }
   translation:
     weight: 10
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
   uid:
     type: entity_reference_autocomplete
     weight: 5
@@ -133,7 +139,7 @@ content:
     third_party_settings: {  }
   url_redirects:
     weight: 50
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden: {  }
