--- a/composer.json
+++ b/composer.json
@@ -102,6 +102,7 @@
         "drupal/paragraphs_preview_helper": "^1.1",
         "drupal/pathauto": "^1.4",
         "drupal/pathologic": "^1.0@alpha",
+        "drupal/pdfpreview": "1.x-dev",
         "drupal/radix": "4.x-dev",
         "drupal/redirect": "^1.3",
         "drupal/redis": "^1.1",
