--- a/config/sync/block.block.megamenu_2.yml
+++ b/config/sync/block.block.megamenu_2.yml
@@ -5,9 +5,13 @@ dependencies:
   config:
     - system.menu.mega-menu
   module:
+    - block_class
     - menu_block
   theme:
     - ipu
+third_party_settings:
+  block_class:
+    classes: ipu-menu-list
 id: megamenu_2
 theme: ipu
 region: ultimenu_mega_fb9f2222
