--- a/config/sync/views.view.events.yml
+++ b/config/sync/views.view.events.yml
@@ -28,6 +28,7 @@ dependencies:
     - options
     - taxonomy
     - user
+    - views_selective_filters
 id: events
 label: Events
 module: views
@@ -74,10 +75,26 @@ display:
             general:
               allow_secondary: false
               secondary_label: 'Advanced options'
-              autosubmit: true
+              autosubmit: false
               autosubmit_exclude_textfield: false
-              autosubmit_hide: true
+              autosubmit_hide: false
             field_event_type_target_id:
+              bef_format: default
+              more_options:
+                bef_select_all_none: false
+                bef_collapsible: false
+                is_secondary: false
+                rewrite:
+                  filter_rewrite_values: ''
+            field_location_country_code_selective:
+              bef_format: default
+              more_options:
+                bef_select_all_none: false
+                bef_collapsible: false
+                is_secondary: false
+                rewrite:
+                  filter_rewrite_values: ''
+            field_event_theme_target_id:
               bef_format: default
               more_options:
                 bef_select_all_none: false
@@ -1634,6 +1651,101 @@ display:
           hierarchy: false
           error_message: true
           plugin_id: taxonomy_index_tid
+        field_event_theme_target_id:
+          id: field_event_theme_target_id
+          table: node__field_event_theme
+          field: field_event_theme_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_event_theme_target_id_op
+            label: Theme
+            description: ''
+            use_operator: false
+            operator: field_event_theme_target_id_op
+            identifier: field_event_theme_target_id
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              product_owner: '0'
+              web_editor: '0'
+              writer: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: theme
+          hierarchy: false
+          error_message: false
+          plugin_id: taxonomy_index_tid
+        field_location_country_code_selective:
+          id: field_location_country_code_selective
+          table: node__field_location
+          field: field_location_country_code_selective
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: ''
+            label: Country
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: field_location_country_code_selective
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              product_owner: '0'
+              web_editor: '0'
+              writer: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          selective_display_field: field_location_country_code
+          selective_entity_type: ''
+          selective_display_sort: ASC
+          selective_aggregated_fields: ''
+          selective_items_limit: '50'
+          plugin_id: views_selective_filters_filter
         field_event_computed_date_value:
           id: field_event_computed_date_value
           table: node__field_event_computed_date
@@ -2711,6 +2823,101 @@ display:
           hierarchy: false
           error_message: true
           plugin_id: taxonomy_index_tid
+        field_event_theme_target_id:
+          id: field_event_theme_target_id
+          table: node__field_event_theme
+          field: field_event_theme_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_event_theme_target_id_op
+            label: Theme
+            description: ''
+            use_operator: false
+            operator: field_event_theme_target_id_op
+            identifier: field_event_theme_target_id
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              product_owner: '0'
+              web_editor: '0'
+              writer: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: theme
+          hierarchy: false
+          error_message: false
+          plugin_id: taxonomy_index_tid
+        field_location_country_code_selective:
+          id: field_location_country_code_selective
+          table: node__field_location
+          field: field_location_country_code_selective
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: ''
+            label: Country
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: field_location_country_code_selective
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              product_owner: '0'
+              web_editor: '0'
+              writer: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          selective_display_field: field_location_country_code
+          selective_entity_type: ''
+          selective_display_sort: ASC
+          selective_aggregated_fields: ''
+          selective_items_limit: '50'
+          plugin_id: views_selective_filters_filter
         field_ipu_event_dates_end_value:
           id: field_ipu_event_dates_end_value
           table: node__field_ipu_event_dates
@@ -3548,6 +3755,101 @@ display:
           hierarchy: false
           error_message: true
           plugin_id: taxonomy_index_tid
+        field_event_theme_target_id:
+          id: field_event_theme_target_id
+          table: node__field_event_theme
+          field: field_event_theme_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_event_theme_target_id_op
+            label: Theme
+            description: ''
+            use_operator: false
+            operator: field_event_theme_target_id_op
+            identifier: field_event_theme_target_id
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              product_owner: '0'
+              web_editor: '0'
+              writer: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: theme
+          hierarchy: false
+          error_message: false
+          plugin_id: taxonomy_index_tid
+        field_location_country_code_selective:
+          id: field_location_country_code_selective
+          table: node__field_location
+          field: field_location_country_code_selective
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: ''
+            label: Country
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: field_location_country_code_selective
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              product_owner: '0'
+              web_editor: '0'
+              writer: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          selective_display_field: field_location_country_code
+          selective_entity_type: ''
+          selective_display_sort: ASC
+          selective_aggregated_fields: ''
+          selective_items_limit: '50'
+          plugin_id: views_selective_filters_filter
         field_event_computed_date_value:
           id: field_event_computed_date_value
           table: node__field_event_computed_date
